test/valid/AbstractClassExtendsConcreteClass/TestConcreteClass.plume
/**
 * Uma classe que testa a classe ConcreteClass, escreve Prof. antes de um nome dado
 *
 * @author 37059, Rita Henriques
 * @version $Id: TestConcreteClass.plume 482 2012-06-04 19:07:29Z tcomp000 $
 */
class TestConcreteClass extends Object is
  		
  method main : () -> String is
  		new ConcreteClass().profName( "Vasco Vasconcelos" )